DeploymentStaging/deployPackage/objects/HOG_Planner_Group_Notification_Type__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HOG Planner Group Notification Types</relationshipLabel>
        <relationshipName>HOG_Planner_Group_Notification_Types</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HOG_Planner_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOG Planner Group</label>
        <referenceTo>HOG_Planner_Group__c</referenceTo>
        <relationshipLabel>HOG Planner Group Notification Types</relationshipLabel>
        <relationshipName>HOG_Planner_Group_Notification_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type_Text__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any Order Type starting with M, enter M*. For multiple entries, separate with a comma like MRX1, MPX1</inlineHelpText>
        <label>Order Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Type__c</fullName>
        <label>Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>Field Scheduler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradesman Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <inlineHelpText>This field accepts wildcard and/or multiple entries. 
Ex. To use any Work Center starting with ELEC, enter ELEC*. For multiple entries, separate with a comma like ELEC100, ELEC200</inlineHelpText>
        <label>Work Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>HOG Planner Group Notification Type</label>
    <nameField>
        <displayFormat>PGNT-{000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HOG Planner Group Notification Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>